k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domain-monitor
  namespace: monitor
  labels:
    app: domain-monitor-web
spec:
  selector:
    app: domain-monitor-web
  ports:
    - name: http
      port: 8000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: domain-monitor-nodeport
  namespace: monitor
spec:
  type: NodePort
  selector:
    app: domain-monitor-web
  ports:
    - name: http
      port: 8000
      targetPort: http
      nodePort: 30888
