k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domain-monitor
  namespace: monitor
spec:
  ingressClassName: apisix
  rules:
    - host: domain-monitor.ug1686688.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: domain-monitor
                port:
                  number: 8000
